salesforce/force-app/main/default/objects/Signature_Request__c/Signature_Request__c.object-meta.xml
<CustomObject>
    <description>InkPath signature request mirrored from the backend engine. Tracks one document sent for signature from a source CRE record (Opportunity, Account, TTL_Core__Deal__c, etc.).</description>
    <label>Signature Request</label>
    <pluralLabel>Signature Requests</pluralLabel>
    <nameField>
        <label>Signature Request Name</label>
        <type>AutoNumber</type>
        <displayFormat>SR-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>