salesforce/force-app/main/default/objects/Signature_Request__c/fields/Backend_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Backend_Request_Id__c</fullName>
    <description>UUID of the corresponding signature_requests row in the InkPath backend.</description>
    <externalId>true</externalId>
    <label>Backend Request Id</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>