salesforce/force-app/main/default/objects/Signature_Request__c/fields/Certificate_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Document_Id__c</fullName>
    <description>ContentDocumentId of the Certificate of Completion PDF.</description>
    <label>Certificate Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>