salesforce/force-app/main/default/objects/Signature_Request__c/fields/Final_Document_Hash__c.field-meta.xml
<CustomField>
    <fullName>Final_Document_Hash__c</fullName>
    <description>SHA-256 hex digest of the final signed/flattened PDF (tamper-evidence).</description>
    <label>Final Document Hash (SHA-256)</label>
    <length>64</length>
    <type>Text</type>
</CustomField>