salesforce/force-app/main/default/objects/Signature_Request__c/fields/Original_Document_Hash__c.field-meta.xml
<CustomField>
    <fullName>Original_Document_Hash__c</fullName>
    <description>SHA-256 hex digest of the original source PDF (tamper-evidence).</description>
    <label>Original Document Hash (SHA-256)</label>
    <length>64</length>
    <type>Text</type>
</CustomField>