salesforce/force-app/main/default/objects/Signature_Request__c/fields/Signed_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Signed_Document_Id__c</fullName>
    <description>ContentDocumentId of the signed PDF written back to the source record.</description>
    <label>Signed Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>