salesforce/force-app/main/default/objects/Signature_Request__c/fields/Signer_Summary__c.field-meta.xml
<CustomField>
    <fullName>Signer_Summary__c</fullName>
    <description>Human-readable summary of signers, their entity, and per-signer status.</description>
    <label>Signer Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>