salesforce/force-app/main/default/objects/Signature_Request__c/fields/Source_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_Type__c</fullName>
    <description>API name of the originating object, e.g. Opportunity or TTL_Core__Deal__c.</description>
    <label>Source Object Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>