salesforce/force-app/main/default/objects/Signature_Request__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <description>Id of the originating record the document was sent from (polymorphic).</description>
    <label>Source Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>