salesforce/force-app/main/default/objects/Signature_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Sent</fullName><default>false</default><label>Sent</label></value>
            <value><fullName>Partially Signed</fullName><default>false</default><label>Partially Signed</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined</label></value>
            <value><fullName>Voided</fullName><default>false</default><label>Voided</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>